--- a/index.html
+++ b/index.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Онлайн магазин мебели</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body class="">
     
     <div class="container">
         <header>
-            <div class="title">PRODUCT LIST</div>
+            <div class="title">Наши товары</div>
             <div class="icon-cart">
                 <svg aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 18 20">
                     <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 15a2 2 0 1 0 0 4 2 2 0 0 0 0-4Zm0 0h8m-8 0-1-4m9 4a2 2 0 1 0 0 4 2 2 0 0 0 0-4Zm-9-4h10l2-7H3m2 7L3 4m0 0-.792-3H1"/>
@@ -23,13 +23,13 @@
         </div>
     </div>
     <div class="cartTab">
-        <h1>Shopping Cart</h1>
+        <h1>Корзина</h1>
         <div class="listCart">
             
         </div>
         <div class="btn">
-            <button class="close">CLOSE</button>
-            <button class="checkOut">Check Out</button>
+            <button class="close">Закрыть</button>
+            <button class="checkOut">Оформить</button>
         </div>
     </div>
 
